src/main/java/com/nattyparse/date/DateParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g 2010-01-19 22:31:28
 package com.nattyparse.date; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class DateParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DATE_TIME", "RELATIVE_DATE", "EXPLICIT_DATE", "AM_PM", "EXPLICIT_TIME", "FORWARD", "BACKWARD", "MONTH", "DAY", "DAY_OF_WEEK", "INTEGER", "FOUR_DIGITS", "DATE_FRAME", "ONE_TO_TWELVE", "THIRTEEN_TO_TWENTY_FOUR", "TWENTY_FIVE_TO_THIRTY_ONE", "TWO_ZEROS", "THIRTY_TWO_TO_FIFTY_NINE", "SIXTY_TO_NINETY_NINE", "DIGIT", "WHITE_SPACE", "'on'", "'at'", "','", "'of'", "'this'", "':'", "'am'", "'a'", "'pm'", "'p'", "'-'", "'/'", "'last'", "'next'", "'first'", "'1st'", "'second'", "'2nd'", "'third'", "'3rd'", "'fourth'", "'4th'", "'fifth'", "'5th'", "'sixth'", "'6th'", "'seventh'", "'7th'", "'eighth'", "'8th'", "'ninth'", "'9th'", "'tenth'", "'10th'", "'eleventh'", "'11th'", "'twelfth'", "'12th'", "'thirteenth'", "'13th'", "'fourteenth'", "'14th'", "'fifteenth'", "'15th'", "'sixteenth'", "'16th'", "'seventeenth'", "'17th'", "'eighteenth'", "'18th'", "'nineteenth'", "'19th'", "'twentieth'", "'20th'", "'twenty'", "'21st'", "'22nd'", "'23rd'", "'24th'", "'25th'", "'26th'", "'27th'", "'28th'", "'29th'", "'thirtieth'", "'30th'", "'thirty'", "'31st'", "'january'", "'jan'", "'february'", "'feb'", "'march'", "'mar'", "'april'", "'apr'", "'may'", "'june'", "'jun'", "'july'", "'jul'", "'august'", "'aug'", "'september'", "'sep'", "'october'", "'oct'", "'november'", "'nov'", "'december'", "'dec'", "'monday'", "'mon'", "'tuesday'", "'tue'", "'tues'", "'wednesday'", "'wed'", "'thursday'", "'thur'", "'thurs'", "'friday'", "'fri'", "'saturday'", "'sat'", "'sunday'", "'sun'", "'today'", "'yesterday'", "'the'", "'day after '", "'day before yesterday'", "'tomorow'", "'tomorrow'", "'tommorow'", "'tommorrow'", "'midnight'", "'noon'", "'\\''", "'in the year'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int DAY=12;
    public static final int EOF=-1;
    public static final int MONTH=11;
    public static final int DATE_TIME=4;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int AM_PM=7;
    public static final int T__92=92;
    public static final int SIXTY_TO_NINETY_NINE=22;
    public static final int T__90=90;
    public static final int T__99=99;
    public static final int T__98=98;
    public static final int T__97=97;
    public static final int T__96=96;
    public static final int RELATIVE_DATE=5;
    public static final int T__95=95;
    public static final int T__139=139;
    public static final int T__138=138;
    public static final int T__137=137;
    public static final int T__136=136;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int DAY_OF_WEEK=13;
    public static final int EXPLICIT_DATE=6;
    public static final int T__141=141;
    public static final int T__85=85;
    public static final int T__142=142;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__140=140;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int T__143=143;
    public static final int T__144=144;
    public static final int T__126=126;
    public static final int T__125=125;
    public static final int T__128=128;
    public static final int T__127=127;
    public static final int T__71=71;
    public static final int T__129=129;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int EXPLICIT_TIME=8;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__130=130;
    public static final int T__74=74;
    public static final int T__131=131;
    public static final int T__73=73;
    public static final int T__132=132;
    public static final int THIRTY_TWO_TO_FIFTY_NINE=21;
    public static final int TWENTY_FIVE_TO_THIRTY_ONE=19;
    public static final int T__133=133;
    public static final int T__79=79;
    public static final int T__134=134;
    public static final int T__78=78;
    public static final int T__135=135;
    public static final int T__77=77;
    public static final int T__68=68;
    public static final int FOUR_DIGITS=15;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int FORWARD=9;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__118=118;
    public static final int T__119=119;
    public static final int T__116=116;
    public static final int T__117=117;
    public static final int T__114=114;
    public static final int T__115=115;
    public static final int T__124=124;
    public static final int T__123=123;
    public static final int T__122=122;
    public static final int T__121=121;
    public static final int T__120=120;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int WHITE_SPACE=24;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__107=107;
    public static final int T__108=108;
    public static final int T__109=109;
    public static final int T__59=59;
    public static final int T__103=103;
    public static final int T__104=104;
    public static final int T__105=105;
    public static final int T__106=106;
    public static final int T__111=111;
    public static final int T__110=110;
    public static final int T__113=113;
    public static final int T__112=112;
    public static final int TWO_ZEROS=20;
    public static final int DIGIT=23;
    public static final int T__50=50;
    public static final int DATE_FRAME=16;
    public static final int INTEGER=14;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int BACKWARD=10;
    public static final int T__102=102;
    public static final int T__101=101;
    public static final int T__100=100;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int THIRTEEN_TO_TWENTY_FOUR=18;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int ONE_TO_TWELVE=17;

    // delegates
    // delegators


        public DateParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DateParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return DateParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g"; }


    public static class datetime_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "datetime"
    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:25:1: datetime : ( ( time )? ( 'on' )? date -> ^( DATE_TIME date ( time )? ) | date ( 'at' )? time -> ^( DATE_TIME date time ) | time -> ^( DATE_TIME ^( RELATIVE_DATE FORWARD INTEGER[\"0\"] ) time ) );
    public final DateParser.datetime_return datetime() throws RecognitionException {
        DateParser.datetime_return retval = new DateParser.datetime_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal2=null;
        Token string_literal5=null;
        DateParser.time_return time1 = null;

        DateParser.date_return date3 = null;

        DateParser.date_return date4 = null;

        DateParser.time_return time6 = null;

        DateParser.time_return time7 = null;


        Object string_literal2_tree=null;
        Object string_literal5_tree=null;
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleSubtreeStream stream_time=new RewriteRuleSubtreeStream(adaptor,"rule time");
        RewriteRuleSubtreeStream stream_date=new RewriteRuleSubtreeStream(adaptor,"rule date");
        try {
            // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:27:3: ( ( time )? ( 'on' )? date -> ^( DATE_TIME date ( time )? ) | date ( 'at' )? time -> ^( DATE_TIME date time ) | time -> ^( DATE_TIME ^( RELATIVE_DATE FORWARD INTEGER[\"0\"] ) time ) )
            int alt4=3;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:27:5: ( time )? ( 'on' )? date
                    {
                    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:27:5: ( time )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==ONE_TO_TWELVE) ) {
                        int LA1_1 = input.LA(2);

                        if ( (LA1_1==FOUR_DIGITS||LA1_1==ONE_TO_TWELVE||LA1_1==25||(LA1_1>=29 && LA1_1<=34)||(LA1_1>=37 && LA1_1<=140)) ) {
                            alt1=1;
                        }
                    }
                    else if ( (LA1_0==THIRTEEN_TO_TWENTY_FOUR||LA1_0==TWO_ZEROS||(LA1_0>=141 && LA1_0<=142)) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:27:5: time
                            {
                            pushFollow(FOLLOW_time_in_datetime103);
                            time1=time();

                            state._fsp--;

                            stream_time.add(time1.getTree());

                            }
                            break;

                    }

                    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:27:11: ( 'on' )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==25) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:27:11: 'on'
                            {
                            string_literal2=(Token)match(input,25,FOLLOW_25_in_datetime106);  
                            stream_25.add(string_literal2);


                            }
                            break;

                    }

                    pushFollow(FOLLOW_date_in_datetime109);
                    date3=date();

                    state._fsp--;

                    stream_date.add(date3.getTree());


                    // AST REWRITE
                    // elements: time, date
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 27:22: -> ^( DATE_TIME date ( time )? )
                    {
                        // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:27:25: ^( DATE_TIME date ( time )? )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DATE_TIME, "DATE_TIME"), root_1);

                        adaptor.addChild(root_1, stream_date.nextTree());
                        // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:27:42: ( time )?
                        if ( stream_time.hasNext() ) {
                            adaptor.addChild(root_1, stream_time.nextTree());

                        }
                        stream_time.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:30:5: date ( 'at' )? time
                    {
                    pushFollow(FOLLOW_date_in_datetime132);
                    date4=date();

                    state._fsp--;

                    stream_date.add(date4.getTree());
                    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:30:10: ( 'at' )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==26) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:30:10: 'at'
                            {
                            string_literal5=(Token)match(input,26,FOLLOW_26_in_datetime134);  
                            stream_26.add(string_literal5);


                            }
                            break;

                    }

                    pushFollow(FOLLOW_time_in_datetime137);
                    time6=time();

                    state._fsp--;

                    stream_time.add(time6.getTree());


                    // AST REWRITE
                    // elements: time, date
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 30:21: -> ^( DATE_TIME date time )
                    {
                        // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:30:24: ^( DATE_TIME date time )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DATE_TIME, "DATE_TIME"), root_1);

                        adaptor.addChild(root_1, stream_date.nextTree());
                        adaptor.addChild(root_1, stream_time.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:33:5: time
                    {
                    pushFollow(FOLLOW_time_in_datetime159);
                    time7=time();

                    state._fsp--;

                    stream_time.add(time7.getTree());


                    // AST REWRITE
                    // elements: time
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 33:10: -> ^( DATE_TIME ^( RELATIVE_DATE FORWARD INTEGER[\"0\"] ) time )
                    {
                        // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:33:13: ^( DATE_TIME ^( RELATIVE_DATE FORWARD INTEGER[\"0\"] ) time )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DATE_TIME, "DATE_TIME"), root_1);

                        // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:33:25: ^( RELATIVE_DATE FORWARD INTEGER[\"0\"] )
                        {
                        Object root_2 = (Object)adaptor.nil();
                        root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(RELATIVE_DATE, "RELATIVE_DATE"), root_2);

                        adaptor.addChild(root_2, (Object)adaptor.create(FORWARD, "FORWARD"));
                        adaptor.addChild(root_2, (Object)adaptor.create(INTEGER, "0"));

                        adaptor.addChild(root_1, root_2);
                        }
                        adaptor.addChild(root_1, stream_time.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "datetime"

    public static class date_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "date"
    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:36:1: date : ( relative_date | explicit_date );
    public final DateParser.date_return date() throws RecognitionException {
        DateParser.date_return retval = new DateParser.date_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        DateParser.relative_date_return relative_date8 = null;

        DateParser.explicit_date_return explicit_date9 = null;



        try {
            // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:37:3: ( relative_date | explicit_date )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==29||(LA5_0>=37 && LA5_0<=38)||(LA5_0>=116 && LA5_0<=140)) ) {
                alt5=1;
            }
            else if ( (LA5_0==FOUR_DIGITS||LA5_0==ONE_TO_TWELVE||(LA5_0>=39 && LA5_0<=115)) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:37:5: relative_date
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_relative_date_in_date189);
                    relative_date8=relative_date();

                    state._fsp--;

                    adaptor.addChild(root_0, relative_date8.getTree());

                    }
                    break;
                case 2 :
                    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:38:5: explicit_date
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_explicit_date_in_date196);
                    explicit_date9=explicit_date();

                    state._fsp--;

                    adaptor.addChild(root_0, explicit_date9.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "date"

    public static class time_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "time"
    // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:41:1: time : explicit_time ;
    public final DateParser.time_return time() throws RecognitionException {
        DateParser.time_return retval = new DateParser.time_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        DateParser.explicit_time_return explicit_time10 = null;



        try {
            // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:42:3: ( explicit_time )
            // /Users/joe/java_workspace/natural/src/main/antlr3/grammar/com/nattyparse/date/Date.g:42:5: explicit_time
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_explicit_time_in_time211);
            explicit_time10=explicit_time();

            state._fsp--;

            adaptor.addChild(root_0, explicit_time10.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "time"

    public static class explicit_date_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
